Bug 428988 - When switching presets with shortcut, brush outline only updates once cursor moves.
Summary: When switching presets with shortcut, brush outline only updates once cursor ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: 4.4.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-11 21:13 UTC by Toby
Modified: 2022-01-08 12:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toby 2020-11-11 21:13:46 UTC
SUMMARY
The previous brush shortcut only works when the cursor is moving on an active canvas

I made sure the custom shortcut had no conflicts, To test I used key '7' on the keyboard not the keypad.

STEPS TO REPRODUCE
1. make or open a canvas
2. select a brush then select another brush so you can switch between them
3. move the cursor over the canvas
4. then without moving your mouse or tablet pen on the canvas use the previous brush shortcut 
5. the brush does not switch to the previous one but the brushes docker shows the switch between the brushes
6. now keep the cursor moving on the canvas and use the previous brush shortcut
7. the shortcut works and the brushes change from one to the other as expected

OBSERVED RESULT
the previous brush shortcut only works when the cursor is moving on the active canvas
However the brush switch is shown in the docker as expected

EXPECTED RESULT
the previous brush shortcut should work when the canvas is active and the cursor is moving or stationary.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2020-11-13 19:40:29 UTC
I can confirm this for the Nov 13 4.4.3 alpha (git 23599b) appimage.

It's noticeable with a mouse which is easy to keep perfectly still.

With a hovering stylus, natural hand 'jitter' makes the change of brush preset seem immediate.
Comment 2 wolthera 2021-09-27 15:52:30 UTC
I cannot reproduce this in Krita 5.0 beta, is this still relevant?
Comment 3 Ahab Greybeard 2021-09-27 19:26:05 UTC
I can reproduce this on the 5.0.0-beta1 appimage and the Sept 27 Nightly 5.1.0-prealpha (git 2a5cf5d) appimage.

I used a mouse and kept it perfectly still while pressing the '?' shortcut.
The brush outline did not change when '?' was pressed but the on-screen message, the status bar indicator and the Brush Preset and Brush Preset History dockers did show the change.

Then, moving the mouse or a left-click caused the brush outline to update to the correct outline.

As noted before, this does not happen for me with a stylus due to small and natural continuous hand movements.
Comment 4 wolthera 2021-09-27 19:47:25 UTC
Alright, I misunderstood the report, renaming to the precise problem (it also happens with any other shortcut to switch presets).
Comment 5 Dmitry Kazakov 2022-01-08 12:52:21 UTC
Git commit e2599cbb9dea270f992469b9771871e1dd1bd9f1 by Dmitry Kazakov.
Committed on 08/01/2022 at 12:50.
Pushed by dkazakov into branch 'master'.

Fix update of the brush outline on preset switch

M  +3    -0    libs/ui/tool/kis_tool_paint.cc

https://invent.kde.org/graphics/krita/commit/e2599cbb9dea270f992469b9771871e1dd1bd9f1
Comment 6 Dmitry Kazakov 2022-01-08 12:53:22 UTC
Git commit a38962a0f6b35a75e28de522019dbfe05a9588b1 by Dmitry Kazakov.
Committed on 08/01/2022 at 12:53.
Pushed by dkazakov into branch 'krita/5.0'.

Fix update of the brush outline on preset switch
(cherry picked from commit e2599cbb9dea270f992469b9771871e1dd1bd9f1)

M  +3    -0    libs/ui/tool/kis_tool_paint.cc

https://invent.kde.org/graphics/krita/commit/a38962a0f6b35a75e28de522019dbfe05a9588b1