Fix update of the brush outline on preset switch

BUG:428988